# MinMax

./: .gitignore  CMakeLists.txt
examples/: connect4.cpp  tic_tac_toe.cpp
minmax/: game_board.hpp  game_compatibility.hpp  game_score.hpp  minmax_engine.hpp  minmax_node.hpp
